# dbcooper

./: .diffhawk.yml  AGENTS.md  README.md  docker-compose.yml  package.json
.github/workflows/: publish.yml  tag-on-merge.yml  test.yml
docs/: wrangler.jsonc
docs/src/components/: Compare.tsx  DownloadButton.tsx  FAQ.tsx  Features.tsx  SEO.astro  ScreenshotCarousel.tsx  Testimonials.tsx
docs/src/icons/: clickhouse.tsx  postgres.tsx  redis.tsx  sqlite.tsx
docs/src/pages/: index.astro
docs/src/styles/: global.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 003_ssh_tunnel.sql
src-tauri/src/: lib.rs  ssh_tunnel.rs
src-tauri/src/commands/: connections.rs  database.rs  mod.rs  pool.rs  postgres.rs
src-tauri/src/database/: clickhouse.rs  mod.rs  pool_manager.rs  postgres.rs  redis.rs  sqlite.rs
src-tauri/src/database/queries/: clickhouse.rs  mod.rs  postgres.rs  sqlite.rs
src-tauri/src/db/: models.rs
src-tauri/tests/: app_data_tests.rs  clickhouse_integration_tests.rs  postgres_integration_tests.rs  redis_integration_tests.rs  sqlite_integration_tests.rs  unified_commands_tests.rs
src/components/: CommandPalette.tsx  ConnectionForm.tsx  ConnectionStatus.tsx  DataTable.tsx  QueryResultSheet.tsx  RowEditSheet.tsx  RowInsertSheet.tsx  SchemaVisualizer.tsx  SqlEditor.tsx  TabBar.tsx  ThemeSwitcher.tsx  UpdateChecker.tsx
src/components/SchemaVisualizer/: TableNode.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  command.tsx  context-menu.tsx  dialog.tsx  switch.tsx
src/lib/: tauri.ts
src/pages/: ConnectionDetails.tsx  Connections.tsx  Settings.tsx
src/types/: tabTypes.ts
